--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 8
+    buildToolsVersion '19.1.0'
 
     defaultConfig {
         applicationId "com.example.mcgiver.myapplication"
         minSdkVersion 8
-        targetSdkVersion 21
+        targetSdkVersion 8
         versionCode 1
         versionName "1.0"
     }
@@ -21,5 +21,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.0'
+
 }
